# launchpad

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: config.rs  main.rs
src/launch/: context.rs  mod.rs
src/platform/: win32.rs
src/targets/: chrome.rs  edge.rs  mod.rs
