[package]
name = "launchpad"
version = "0.1.0"
authors = ["Chris Hutchinson <chris@cshutchinson.com>"]
edition = "2018"

[dependencies]
winapi = {version = "0.3.9", features = ["winuser", "wingdi"]}
winit = "0.24.0"
clap = "3.0.0-beta.2"
toml = "0.5.8"
serde = "1.0.120"
serde_derive = "1.0.120"
lazy_static = "1.4.0"
rand = "0.8.2"